<resources>
    <string name="app_name">Admin</string>
    <string name="table_name">Tasks</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_text">Don\'t have an account? Signup instead</string>
    <string name="create_account">Create An Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_back">Already have an account? Login instead</string>
    <string name="add_task">Add Task</string>
    <string name="new_task_icon">new task icon</string>
    <string name="name">Name</string>
    <string name="explain_task">Explain your task</string>
    <string name="deadline">Choose a deadline</string>
    <string name="choose_type_first">Choose type first</string>
    <string name="add_funds">Add Funds</string>
    <string name="withdraw_funds">Withdraw Funds</string>
    <string name="profile">Profile</string>
    <string name="rupee">₹ %1$d</string>
    <string name="view_tasks">View Tasks</string>
    <string name="status">Status</string>
    <string name="done_date">Completed on</string>
    <string name="response">Response</string>
    <string name="state">No Tasks Found.</string>
    <string name="terms"><![CDATA[I accept terms & conditions]]></string>
    <string name="reminder">Send a reminder</string>
    <string name="funds">Funds: ₹%1$s</string>
    <string name="more">MORE</string>
    <string name="no_funds_history">No Funds History.</string>
    <string name="how_much">How much would you like to add?</string>
    <string name="view_funds_history">View funds history</string>
    <string name="view_history">View History</string>
    <string name="disapprove">Disapprove</string>
    <string name="disapproved">disapproved</string>
    <string name="approved">Approved</string>
    <string name="welcome_header">Control your children phone with your phone" </string>
    <string name="welcome_text"> Add money as pocket money and give to your children when they complete a task.</string>
    <string name="lock">LOCK</string>
</resources>