<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="no">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_for_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createaccount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toTopOf="@+id/name_for_signup"
        app:layout_constraintEnd_toEndOf="@+id/name_for_signup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name_for_signup"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/name_for_signup"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="4dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/email_for_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccount_text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/email_for_signup"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/email"
        android:drawableTint="@color/black"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/password_for_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_for_signup"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password_for_signup"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_for_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_for_signup"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/confirm_password_for_signup"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_for_signup"
        tools:ignore="Autofill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/purple_200"
        android:textColor="@color/purple_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/signup"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:drawableTint="@color/purple_200"
        app:rippleColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/login_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_for_signup" />

    <TextView
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_for_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>