<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252847"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/secondary_blue"
        android:foregroundGravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/graph_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/avatar"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/funds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:backgroundTint="@color/primary_blue"
            android:padding="8dp"
            android:text="@string/funds"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/graph_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/secondary_blue"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:id="@+id/progress_circular"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_in"
            android:visibility="visible" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_24"
            app:drawableTint="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/add_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/graph_container">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:backgroundTint="@color/secondary_blue"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/new_task_icon"
                android:src="@drawable/usage" />

            <Button
                android:id="@+id/view_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_tasks" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:backgroundTint="@color/secondary_blue"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="32dp"
                android:contentDescription="@string/new_task_icon"
                android:src="@drawable/wallet_image" />

            <Button
                android:id="@+id/add_funds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_funds" />

            <!--            <Button-->
            <!--                android:id="@+id/withdraw_funds"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/withdraw_funds" />-->
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_background"
        android:text="@string/add_task"
        android:textSize="17sp"
        app:backgroundTint="@color/secondary_blue"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>