<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/primary_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/shape_blue"
        android:id="@+id/fortop"
        tools:ignore="MissingConstraints">


    </RelativeLayout>

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:text="Admin Login"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <EditText
            android:id="@+id/email_for_login"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="4dp"
            android:drawableTint="@color/black"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <EditText
            android:id="@+id/password_for_login"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_marginTop="9dp"
            android:autofillHints=""
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/ic_baseline_password_24"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="253dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:width="2dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:drawableTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/white"
            app:backgroundTintMode="add"
            app:backgroundTint="@null"
            android:background="@drawable/diff_style_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_for_login"
            app:layout_constraintVertical_bias="0.075" />

    </LinearLayout>


    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/signup_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>