<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    android:fitsSystemWindows="true"
    tools:context=".ui.NewTaskActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:foregroundTint="@color/white"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,RtlSymmetry,UseAppTint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/task_detail"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="@string/explain_task"
            android:importantForAutofill="no"
            android:inputType="text|textCapSentences|textMultiLine"
            android:isScrollContainer="true"
            android:maxLength="200"
            android:maxLines="4"
            android:padding="8dp"
            android:scrollHorizontally="false"
            android:singleLine="false" />

        <TextView
            android:id="@+id/task_deadline"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_with_calender"
            android:foregroundGravity="center"
            android:gravity="center|start"
            android:hint="@string/deadline"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/material_on_background_disabled"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/task_type"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_bg" />

        <EditText
            android:id="@+id/task_type_detail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="@string/choose_type_first"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="50"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_task"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:drawableTint="@color/primary_blue"
            android:text="@string/add_task"
            android:textColor="@color/primary_blue"
            app:rippleColor="@color/primary_blue"
            app:strokeColor="@color/primary_blue"
            app:strokeWidth="2dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>