<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    android:fitsSystemWindows="true"
    tools:context=".ui.NewTaskActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:foregroundTint="@color/white"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,RtlSymmetry,UseAppTint" />

    <TextView
        android:id="@+id/funds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:padding="8dp"
        android:text="Funds: \u20B9"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/shape"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp"
            android:gravity="center"
            android:text="How much would you like to withdraw?"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:background="@drawable/input_background"
            android:foregroundGravity="center"
            android:gravity="center|start"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:text="@string/rupee"
            android:textColor="@color/material_on_background_disabled"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/name_for_withdraw"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/material_on_background_disabled"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/upi_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="Your UPI ID"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/material_on_background_disabled"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_for_withdraw"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="Your Email"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/material_on_background_disabled"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_for_withdraw"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_background"
            android:hint="Your password"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/material_on_background_disabled"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/terms" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/withdraw_amount"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:drawableTint="@color/purple_200"
            android:enabled="false"
            android:text="@string/withdraw_funds"
            android:textColor="@color/purple_200"
            app:rippleColor="@color/purple_200"
            app:strokeColor="@color/purple_200" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>